--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -122,9 +122,11 @@ h2 {
 
 #skill-box {
 /*  width: auto;*/
+  opacity: 1;
   padding: 10px;
   border: 2px solid #e67e22;  
   text-align: center;
+  transition: .12s;
 }
 
 #skill-box p {
